<resources>
    <string name="app_name">Mealky</string>
    <string name="meals">Meals</string>
    <string name="shopping_list">Shopping list</string>
    <string name="ingredients">Ingredients</string>
    <string name="settings">Settings</string>
    <string name="meal_image">Meal image</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="version">Version %s</string>
    <string name="about_version">About version</string>
    <string name="prep_time">%s min</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotten_password">I forgot my password</string>
    <string name="username">Username</string>
    <string name="to_sign_in">Registered already? Sign in!</string>
    <string name="to_sign_up">Sign up new account</string>
    <string name="search">Search</string>
    <string name="test_username">My username</string>
    <string name="logo">logo</string>
    <string name="you_need_to_confirm_email">You need to confirm email first!</string>
    <string name="missing_user">There is no such user in our database!</string>
    <string name="invalid_password">You need to type correct password</string>
    <string name="incorrect_username">Username is incorrect. You can use only letters or numbers. Maximum is 15 characters.</string>
    <string name="incorrect_email">Email is incorrect. It should be like: xxx@yyy.zz</string>
    <string name="incorrect_password">Password should be longer than 5 signs.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="username_taken">This username is already used.</string>
    <string name="email_taken">This email is already used.</string>
    <string name="bullet">bullet</string>
    <string name="preparations">Preparation</string>
    <string name="add_to_shopping_list">Add to shopping list</string>
    <string name="plus_button">plus button</string>
    <string name="clear_list">Clear list</string>
    <string name="empty_shopping_list">Your shopping list is empty. You can add something to it!</string>
    <string name="empty_search_for">No results found for \"%1$s\"</string>
    <string name="shopping_list_snackbar_text">Do you want to recover your list?</string>
    <string name="click">Click!</string>
    <string name="save_ingredients_text">Saving ingredients to shopping list succeeded!</string>
    <string name="list_cleared">The list had been cleared</string>
    <string name="just_a_moment">Just a moment…</string>
    <string name="service_unavailable">Our app is unavailable, check your connection or try again later!</string>
    <string name="retry">Retry</string>
    <string name="exit_app">Exit app</string>
    <string name="add">Add</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_will_lose">You will lose the entire shopping list!</string>
    <string name="confirm">Confirm</string>
    <string name="go_back">Go back</string>
    <string name="you_already_have_ingredient">You already have such an ingredient on the list </string>
    <string name="reset_password">Reset your password</string>
    <string name="password_reseted">Password has been reseted. Check your email!</string>
    <string name="go_back_to_sign_in">Go back to sign in</string>
    <string name="preparation_time_min">Preparation time (min)</string>
    <string name="title">Title</string>
    <string name="add_new_recipe">Add new recipe</string>
    <string name="description">Description</string>
    <string name="add_images">Add images</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="title_error">Title cannot be empty!</string>
    <string name="prep_error">Description cannot be empty!</string>
    <string name="prep_time_error">Preparation time must be greater than zero!</string>
    <string name="ingredients_error">You have to add at least one ingredient!</string>
    <string name="images_error">You have to add at least one image!</string>
    <string name="remove_button">Remove button</string>
    <string name="meal_added">Your meal waits for verification. You will receive an email when recipe will be confirmed.</string>
    <string name="open_gallery">Open gallery</string>
    <string name="open_camera">Open camera</string>
    <string name="error_message_no_more_space">Your storage is unavailable.</string>
    <string name="error_message_insufficient_space">You have few space available, please make sure your have more than 5MB on disk to take pictures!</string>
    <string name="ok">OK</string>
    <string name="label_setting">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="error_message">Error occurred!</string>
    <string name="message_need_permission">Need Permissions</string>
    <string name="message_grant_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="remove_item">Remove item button</string>
    <string name="thumbnail">Thumbnail</string>
</resources>
