<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/addMealLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_recipe"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/preparationTimeInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/preparation_time_min"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/addImagesTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_add_box_40dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/add_images"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <com.teammealky.mealky.presentation.addmeal.view.AddMealThumbnailsView
                android:id="@+id/addMealThumbnailsView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/imagesErrorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/images_error"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/addIngredientsTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:drawableEnd="@drawable/ic_add_box_40dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:text="@string/add_ingredient"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/ingredientsErrorTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/ingredients_error"
                android:textColor="@android:color/holo_red_light"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredientListRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:clickable="true"
                android:clipToPadding="false"
                android:focusable="true"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:listitem="@layout/add_ingredient_list_item" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/preparationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="textMultiLine"
                    android:maxLines="5"
                    android:minLines="1"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:scrollHorizontally="false" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:text="@string/confirm" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/addMealProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            tools:visibility="visible" />
    </FrameLayout>

</ScrollView>

